force-app/main/default/objects/Partner_Account_Relationship__c/Partner_Account_Relationship__c.object-meta.xml
<CustomObject>
<label
  >Partner Account Relationship</label><pluralLabel
  >Partner Account Relationships</pluralLabel>
    <nameField><displayFormat>PAR-{00000000}</displayFormat><label
    >Partner Account Relationship Number</label><type
    >AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities>
</CustomObject>