force-app/main/default/objects/Partner_Account_Relationship__c/fields/Allows_CoSell__c.field-meta.xml
<CustomField>
    <fullName>Allows_CoSell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows Co-Sell</label>
    <type>Checkbox</type>
</CustomField>