force-app/main/default/objects/Partner_Account_Relationship__c/fields/Allows_Deal_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Allows_Deal_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows Deal Visibility</label>
    <type>Checkbox</type>
</CustomField>