force-app/main/default/objects/Partner_Account_Relationship__c/fields/Allows_Lead_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Allows_Lead_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows Lead Sharing</label>
    <type>Checkbox</type>
</CustomField>