force-app/main/default/objects/Partner_Account_Relationship__c/fields/Allows_MDF_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Allows_MDF_Collaboration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows MDF Collaboration</label>
    <type>Checkbox</type>
</CustomField>