force-app/main/default/objects/Partner_Account_Relationship__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel
  >Partner Account Relationships Approved</relationshipLabel>
    <relationshipName>Partner_Account_Relationships_Approved</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>