force-app/main/default/objects/Partner_Account_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Co-Sell</fullName><default>false</default><label
        >Co-Sell</label></value>
            <value><fullName>Distributor</fullName><default
        >false</default><label>Distributor</label></value>
            <value><fullName>Reseller</fullName><default>false</default><label
        >Reseller</label></value>
            <value><fullName>Subcontractor</fullName><default
        >false</default><label>Subcontractor</label></value>
            <value><fullName>Technology Partner</fullName><default
        >false</default><label>Technology Partner</label></value>
            <value><fullName>Implementation Partner</fullName><default
        >false</default><label>Implementation Partner</label></value>
            <value><fullName>Referral Partner</fullName><default
        >false</default><label>Referral Partner</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>