force-app/main/default/objects/Partner_Account_Relationship__c/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <label>Source Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel
  >Partner Account Relationships (Source)</relationshipLabel>
    <relationshipName>Partner_Account_Relationships_Source</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>