force-app/main/default/objects/Partner_Account_Relationship__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Proposed</fullName><default>false</default><label
        >Proposed</label></value>
            <value><fullName>Active</fullName><default>false</default><label
        >Active</label></value>
            <value><fullName>Suspended</fullName><default>false</default><label
        >Suspended</label></value>
            <value><fullName>Expired</fullName><default>false</default><label
        >Expired</label></value>
            <value><fullName>Terminated</fullName><default>false</default><label
        >Terminated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>