force-app/main/default/objects/Partner_Account_Relationship__c/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <label>Target Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel
  >Partner Account Relationships (Target)</relationshipLabel>
    <relationshipName>Partner_Account_Relationships_Target</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>